Separate report page from landing.

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -9,6 +9,10 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
         <i class="bi bi-house-door-fill"></i>
         <span>Home</span>
     </a>
+    <a href="/report">
+        <i class="bi bi-chat-right-dots-fill"></i>
+        <span>Report</span>
+    </a>
     <a href="/schedule">
         <i class="bi bi-calendar2-plus-fill"></i>
         <span>Schedule</span>
