Refactor multi-step form logic.

--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -87,6 +87,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
     <div th:if="${message}" th:replace="~{fragments/success-modal :: success-modal(title='Request Submitted!', text=${message}, referenceId=null, referenceIdLabel=null)}"></div>
 
     <div th:replace="~{fragments/common :: scripts}"></div>
+    <script src="/js/multi-step-form.js"></script>
     <script src="/js/schedule-form.js"></script>
 
     <script th:if="${message}">
