--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -9,6 +9,8 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="${title}">SafePoint</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#0d6efd">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
@@ -19,6 +21,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
 <div th:fragment="scripts" xmlns:th="http://www.thymeleaf.org">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/pwa.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const currentPath = window.location.pathname;
