--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,8 +14,11 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
             <div id="bento-container">
                 <div class="hero-section">
-                    <h1>SafePoint</h1>
-                    <p class="lead">A safe space for students to report bullying and find support confidentially.</p>
+                    <img src="/LYFJSHS.png" alt="School Logo" class="hero-logo">
+                    <div class="hero-text">
+                        <h1>SafePoint</h1>
+                        <p class="lead">A safe space for students to report bullying and find support confidentially.</p>
+                    </div>
                 </div>
                 <div class="bento-grid">
                     <a href="/report" class="bento-card">
