Replace reference on hero section container.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
             <div id="bento-container">
                 <div class="hero-section">
-                    <img src="/LYFJSHS.png" alt="School Logo" class="hero-logo">
+                    <img src="/favicon.svg" alt="School Logo" class="hero-logo">
                     <div class="hero-text">
                         <h1>SafePoint</h1>
                         <p class="lead">A safe space for students to report bullying and find support confidentially.</p>
