--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -17,6 +17,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                     <p class="text-muted">Submit a confidential report about bullying.</p>
                 </div>
 
+                <div id="validation-alert" class="alert alert-danger d-none mb-4" role="alert"></div>
                 <form id="reportForm" th:action="@{/submit-report}" th:object="${report}" method="post" enctype="multipart/form-data" novalidate>
                     
                     <div th:replace="~{fragments/form-components :: form-progress-bar(totalSteps=4)}"></div>
