--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -17,6 +17,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                     <p class="text-muted">Choose a time that feels right. We are here to support you.</p>
                 </div>
 
+                <div id="validation-alert" class="alert alert-danger d-none mb-4" role="alert"></div>
                 <form id="appointmentForm" th:action="@{/schedule}" th:object="${appointment}" method="post" novalidate>
                     
                     <div th:replace="~{fragments/form-components :: form-progress-bar(totalSteps=3)}"></div>
