Add spinner overlay and validation for report submission form

--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -90,7 +90,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                                         <p class="text-muted mb-2">Uploaded Files:</p>
                                         <ul id="review-files" class="list-group mb-3"></ul>
                                         <p class="text-muted mb-0">External Link:</p>
-                                        <p id="review-externalLink"></p>
+                                        <p id="review-externalLink" style="word-wrap: break-word;"></p>
                                     </div>
                                 </div>
                             </div>
