--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -15,6 +15,24 @@ body.admin-body {
     background-color: #f8f9fa;
 }
 
+.spinner-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none; /* Hidden by default */
+    justify-content: center;
+    align-items: center;
+    z-index: 1050;
+    backdrop-filter: blur(4px);
+}
+
+.spinner-overlay.show {
+    display: flex;
+}
+
 .content-container {
     max-width: 700px;
     margin: 0 auto;
