--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -20,8 +20,13 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 </head>
 
 <div th:fragment="scripts" xmlns:th="http://www.thymeleaf.org">
+    <div id="spinner-overlay" class="spinner-overlay">
+        <div class="spinner-border text-light" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/pwa.js"></script>
+    <!-- <script src="/js/pwa.js"></script> -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const currentPath = window.location.pathname;
