Added mailing after setting appointment.

--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -6,7 +6,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/common :: head('Submit a Report')}"></head>
+<head th:replace="~{fragments/common :: head('SafePoint - Submit a Report')}"></head>
 <body>
     <div th:replace="~{fragments/nav :: nav}"></div>
     <div class="main-content">
