--- a/src/main/resources/templates/fragments/admin-common.html
+++ b/src/main/resources/templates/fragments/admin-common.html
@@ -29,6 +29,12 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
             <div class="collapse navbar-collapse" id="adminNavbar">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
+                        <a class="nav-link" th:href="@{/admin/reports}">Reports</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/admin/appointments}">Appointments</a>
+                    </li>
+                    <li class="nav-item">
                         <a th:href="@{/admin/logout}" class="btn btn-outline-light">Logout</a>
                     </li>
                 </ul>
