--- a/src/main/resources/templates/report-detail.html
+++ b/src/main/resources/templates/report-detail.html
@@ -77,11 +77,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
             <hr class="my-4">
 
             <div class="d-flex flex-column flex-md-row justify-content-between gap-2">
-                <a th:href="@{/admin/dashboard}" class="btn btn-secondary">Back to Dashboard</a>
-                <form th:action="@{/admin/report/delete}" method="post" onsubmit="return confirm('Are you sure you want to delete this report?');" class="d-grid">
-                    <input type="hidden" name="reportId" th:value="${report.reportId}" />
-                    <button type="submit" class="btn btn-danger">Delete Report</button>
-                </form>
+                <a th:href="@{/admin/reports}" class="btn btn-secondary">Back to Reports</a>
             </div>
         </div>
     </div>
